config/travels-app-mirror/discounts-v2.yaml
##################################################################################################
# Discounts services v2
##################################################################################################
kind: Deployment
apiVersion: apps/v1
metadata:
  name: discounts-v2
  namespace: travel-agency
spec:
  selector:
    matchLabels:
      app: discounts
      version: v2
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
        readiness.status.sidecar.istio.io/applicationPorts: ""
        proxy.istio.io/config: |
          tracing:
            zipkin:
              address: zipkin.istio-system:9411
            sampling: 10
            custom_tags:
              http.header.portal:
                header:
                  name: portal
              http.header.device:
                header:
                  name: device
              http.header.user:
                header:
                  name: user
              http.header.travel:
                header:
                  name: travel
      labels:
        app: discounts
        version: v2
    spec:
      containers:
        - name: discounts
          image: quay.io/kiali/demo_travels_discounts:v1     # faking the 'new' version
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
