config/travels-app-mirror/vs-discounts-mirror.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: discounts
  namespace: travel-agency
spec:
  hosts:
#  - discounts.travel-agency.svc.cluster.local
  - discounts
  http:
  - mirror:
      host: discounts
      subset: v2
    mirrorPercentage:
      value: 100
    route:
    - destination:
        host: discounts
        subset: v1
      weight: 100
